<resources>
    <string name="app_name">다독임</string>

    <string name="signin">로그인</string>
    <string name="signup">회원가입</string>
    <string name="email">이메일</string>
    <string name="start">시작하기</string>
    <string name="nick">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="password_ok">비밀번호 확인</string>
    <string name="next">다음</string>
    <string name="together">함께하기</string>

    <string name="signin_info">아직 회원이 아니신가요?</string>
    <string name="signup_title_1">반갑습니다.</string>
    <string name="signup_title_2">다독임의 회원이 되어주세요!</string>
    <string name="signup_info">가입시 다독임의 이용약관, 개인정보취급방침 및\n운영원칙에 동의하게 됩니다.</string>
    <string name="signup_complete">회원가입이 완료되었습니다.</string>
    <string name="signup_complete_detail">%s님의 회원가입을 축하드립니다.\n로그인 후 모든 서비스를 이용할 수 있습니다.</string>

    <string name="error_signin_id_empty">아이디를 입력하세요.</string>
    <string name="error_signin_pw_empty">비밀번호를 입력하세요.</string>
    <string name="error_signin_id_valid">아이디가 이메일 형식이 아닙니다.</string>

    <string name="error_signup_pwok">비밀번호가 다릅니다.</string>

    <string name="item_home">홈</string>
    <string name="item_books">추천서적</string>
    <string name="item_my_page">마이페이지</string>
    <string name="add_book_desc_2">서적 검색 결과가 없는 경우\n직접 서적의 표지를 찍어 업로드\n해주세요!</string>
    <string name="book_reco_reason">이 책을 추천하는 이유</string>
    <string name="hint_reco_reason">추천이유를 남겨주세요.</string>
    <string name="add_book_title">%s님의\n 추천 독립서적은?</string>
    <string name="recommend_book_title">%s 님의\n추천 독립서적 리뷰를 남겨주세요!</string>
</resources>
